[project]
name = "fanfan-bot"
version = "1.1.1"
authors = [
    { name = "Arutemu64", email = "arutemu64@outlook.com" },
]
description = "Festival bot"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "adaptix>=3.0.0b8",
    "aiogram>=3.13.1",
    "aiogram-dialog>=2.2.0",
    "alembic>=1.13.3",
    "dataclass-rest>=0.5.0",
    "dishka>=1.4.0",
    "fastapi>=0.115.2",
    "fastapi-storages>=0.3.0",
    "faststream[cli,nats,prometheus,otel]",
    "greenlet>=3.1.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "numpy>=2.1.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg[binary]>=3.2.3",
    "pydantic[timezone]>=2.9.2",
    "pydantic-extra-types>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.9.0",
    "qrcode[pil]>=8.0",
    "redis>=5.1.1",
    "rich>=13.9.3",
    "sentry-sdk[sqlalchemy]>=2.17.0",
    "sqladmin>=0.20.0",
    "sqlalchemy>=2.0.36",
    "structlog>=24.4.0",
    "sulguk>=0.8.0",
    "taskiq>=0.11.7",
    "taskiq-redis>=1.0.2",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "uv-sort>=0.2.1",
]
opentelemetry = [
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-aiohttp-client>=0.48b0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
]

[tool.uv]
default-groups = ["dev", "opentelemetry"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fanfan"]
