[project]
name = "fanfan-bot"
version = "1.1.1"
authors = [
    { name = "Arutemu64", email = "arutemu64@outlook.com" },
]
description = "Festival bot"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "adaptix>=3.0.0b8",
    "aiogram>=3.13.1",
    "aiogram-dialog>=2.2.0",
    "alembic>=1.13.3",
    "alembic-postgresql-enum>=1.5.0",
    "click>=8.1.8",
    "dishka>=1.4.0",
    "fastapi>=0.115.2",
    "fastapi-storages>=0.3.0",
    "faststream[cli,nats]",
    "greenlet>=3.1.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "nh3>=0.2.21",
    "numpy>=2.1.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg[binary]>=3.2.9",
    "pydantic[timezone]>=2.9.2",
    "pydantic-extra-types>=2.9.0",
    "pydantic-settings>=2.6.1",
    "pyjwt>=2.9.0",
    "qrcode[pil]>=8.0",
    "redis>=5.1.1",
    "rich>=13.9.3",
    "sentry-sdk[sqlalchemy]>=2.17.0",
    "sqladmin>=0.20.0",
    "sqlalchemy>=2.0.36",
    "structlog>=24.4.0",
    "taskiq>=0.11.7",
    "taskiq-redis>=1.0.2",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "uv-sort>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fanfan"]

[project.scripts]
migrate = "fanfan.main.migration:main"
bot = "fanfan.main.bot:main"
web = "fanfan.main.web:main"
stream = "fanfan.main.stream:main"
cli = "fanfan.main.cli:main"
