[project]
name = "fanfan-bot"
version = "1.1.1"
authors = [
    { name = "Arutemu64", email = "arutemu64@outlook.com" },
]
description = "Festival bot"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "adaptix>=3.0.0b8",
    "aiogram-dialog>=2.2.0",
    "aiogram>=3.13.1",
    "alembic-postgresql-enum>=1.5.0",
    "alembic>=1.13.3",
    "click>=8.1.8",
    "dishka>=1.4.0",
    "fastapi-storages>=0.3.0",
    "fastapi>=0.115.2",
    "faststream[cli,nats]",
    "greenlet>=3.1.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "logfire[aiohttp,fastapi,redis,sqlalchemy,system-metrics]>=3.16.0",
    "numpy>=2.1.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg[binary]>=3.2.9",
    "pydantic-extra-types>=2.9.0",
    "pydantic-settings>=2.6.1",
    "pydantic[timezone]>=2.9.2",
    "pyjwt>=2.9.0",
    "qrcode[pil]>=8.0",
    "redis>=5.1.1",
    "rich>=13.9.3",
    "sqladmin>=0.20.0",
    "sqlalchemy>=2.0.36",
    "structlog>=24.4.0",
    "sulguk>=0.8.0",
    "taskiq-redis>=1.0.2",
    "taskiq>=0.11.7",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "uv-sort>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fanfan"]

[project.scripts]
migrate = "fanfan.main.migration:main"
bot = "fanfan.main.bot:main"
web = "fanfan.main.web:main"
stream = "fanfan.main.stream:main"
cli = "fanfan.main.cli:main"
